x2goclient (4.0.5.2-0x2go1) UNRELEASED; urgency=medium

  [ Klaus Ade Johnstad ]
  * New upstream version (4.0.5.2):
    - res/i18n/x2goclient_nb_no.ts: update Bokmål (Norway) translation file.

 -- X2Go Release Manager <git-admin@x2go.org>  Thu, 24 Mar 2016 23:04:42 +0100

x2goclient (4.0.5.1-0x2go1) unstable; urgency=low

  [ Mihai Moldovan ]
  * New upstream release (4.0.5.1):
    - onmainwindow.cpp: include sshd PID file path option in quotes to support
      whitespaces within the var directory path on Windows. Add comment to
      revisit this later on non-Windows-platforms, too. Fixes: #916.
    - onmainwindow.cpp: do NOT reformat. Reverts most of the previous commit
      because it breaks code logic.
    - res/txt/packs: add adaptive method.
    - {macbuild.sh,x2goclient.pro}: pass MacPorts library and include path's
      to qmake. Due to the qt4-mac's changes, we do not automatically get
      these values automatically "appended" in a usable way anymore.
    - x2gosettings.cpp: let centralSettings () return false on Windows.
    - onmainwindow.cpp: be more precise in slotScDaemonError () regarding
      unknown and undefined errors.
    - onmainwindow.{cpp,h}: don't use a hardcoded path to xmodmap on OS X and
      handle errors more gracefully. Fixes: #487.
    - x2goclient.pro: fix typo --stdlib=... -> -stdlib=... Fixes: #973.
    - onmainwindow.cpp: add some more error handling for parsing the return
      value of x2golistsessions. As it turns out, it can happen that "invalid"
      strings are inserted in there, for instance by the perl interpreter
      itself. We need to skip over these, or the client crashes when splitting
      up the invalid lines.
    - macbuild.sh: add stdlib forcing. Should not be used unless you really
      know what you're doing. If you ponder using this, you probably don't.
    - res/resources.rcc: add Turkish translation file. Fixes: #987.
    - onmainwindow.cpp: use lowercase version of locale. Fixes: #953.